--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -9,7 +9,7 @@
     <%   for (let listing of allListing){%>
         <a href="/listings/<%=listing._id%>" class="listing-link">
 
-            <div class="card    " >
+            <div class="card    listing-card " >
 
                 <img src="<%=listing.image%>" class="card-img-top" style=" height: 20rem;" alt="listing_image">
 
