--- a/views/listing/new.ejs
+++ b/views/listing/new.ejs
@@ -44,7 +44,7 @@
                 <div class="invalid-feedback">Please enter valid Location</div>
             </div>
     
-    <button  class="btn btn-dark add-btn mt-3">Add</button>
+    <button  class="btn btn-dark add-btn mt-3 mb-3">Add</button>
 </form>
 </div>
 </div>
