--- a/views/listing/show.ejs
+++ b/views/listing/show.ejs
@@ -72,7 +72,7 @@
                             <p class="card-text"> <%=review.rating %> stars</p>
                         </div>
                         <form action="/listings/<%=listing.id%>/reviews/<%=review.id%>?_method=Delete" method="post">
-                            <button class="btn btn-sm btn-dark">Delete </button>
+                            <button class="btn btn-sm mb-2 mt-2 btn-dark">Delete </button>
                         </form>
                         
                         
